Voice and Webcam Done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xampro</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">  (Profile CSS use optional)-->
+
+    <!-- Below Stylesheet only for testing purpose -->
+    <link rel="stylesheet" href="./src/components/VoiceModule/temp.css">
+    
 
     <!-- Bootstrap CSS Start here (optional) -->
     <!-- Google Fonts -->
