--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">  (Profile CSS use optional)-->
 
     <!-- Below Stylesheet only for testing purpose -->
-    <link rel="stylesheet" href="./src/components/VoiceModule/temp.css">
+    <!-- <link rel="stylesheet" href="./src/components/VoiceModule/temp.css"> -->
     
 
     <!-- Bootstrap CSS Start here (optional) -->
