Student Test Registration

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xampro</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">  (Profile CSS use optional)-->
 
-    <!-- Below Stylesheet only for testing purpose -->
+
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">  
+    <!-- (Profile CSS use optional) -->
+
+    <!-- Below Stylesheet only for testing for voice module purpose -->
     <!-- <link rel="stylesheet" href="./src/components/VoiceModule/temp.css"> -->
     
 
@@ -18,7 +21,14 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
     <!-- Font Awesome CSS -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css'>
-    <!-- Bootstrap CSS end here (optional)-->
+    <!-- Bootstrap CSS end here (optional) -->
+
+    <!----===== Iconscout CSS(TestRegisteration for students) ===== -->
+    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"> -->
+
+    <!-- Testregistration JS file (required Temporary) -->
+    <!-- <script src="./src/components/registration/testRegisteration.js"></script> -->
+
   </head>
   <body>
     <div id="root"></div>
