--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 
-    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"> -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- (Profile CSS use optional) -->
 
     <!-- Below Stylesheet only for testing for voice module purpose -->
@@ -25,9 +25,6 @@
 
     <!----===== Iconscout CSS(TestRegisteration for students) ===== -->
     <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"> -->
-
-    <!-- Testregistration JS file (required Temporary) -->
-    <!-- <script src="./src/components/registration/testRegisteration.js"></script> -->
 
   </head>
   <body>
